Refactoring for documents, spreadsheet api and examples using curl
